Potentially fixed background-attachment for the hero image; committing & pushing to test on mobile.

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -69,34 +69,60 @@
 /* Main styles */
 body {
   margin: 0px;
+  background-color: #fff;
 }
 
 #hero {
-  background-image: var(--img__hero);
-  background-size: cover;
-  background-attachment: fixed;
   display: flex;
   height: 40em;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 3em;
+  overflow: hidden;
+  position: relative;
+}
+#hero::after {
+  content: " ";
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: var(--img__hero);
+  background-size: cover;
+  will-change: transform;
+  z-index: -5;
+  overflow: hidden;
 }
 #hero #hero__navbar {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
+#hero h1 {
+  color: #fff;
+  font-size: 3rem;
+}
+#hero h3 {
+  color: #fff;
+}
 #hero a {
   color: #000;
 }
 
 /* hero */
+#main-content {
+  background-color: #fff;
+  padding-top: 2rem;
+}
+
 #about-me {
   margin: var(--margin__main-content);
 }
 #about-me h2 {
   background-image: var(--img__about-me);
+  color: #fff;
   display: flex;
   justify-content: center;
   align-items: flex-end;
@@ -112,6 +138,7 @@ body {
 }
 #another-card h2 {
   background-image: var(--img__another-card);
+  color: #fff;
   display: flex;
   justify-content: center;
   align-items: flex-end;
@@ -196,7 +223,9 @@ body {
 #contact {
   display: flex;
   flex-direction: column;
-  margin: var(--margin__main-content);
+  padding-bottom: var(--margin__main-content);
+  margin-left: var(--margin__main-content);
+  margin-right: var(--margin__main-content);
 }
 #contact h2 {
   text-align: center;
